--- a/litterclear/Base.lproj/Main.storyboard
+++ b/litterclear/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -188,7 +188,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="egy-dL-Oue">
-                                <rect key="frame" x="149.5" y="40" width="76.5" height="17"/>
+                                <rect key="frame" x="149" y="40" width="77" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -455,13 +455,13 @@
                                         <rect key="frame" x="0.0" y="79" width="338" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3t-cG-Bc7">
-                                                <rect key="frame" x="0.0" y="0.0" width="27.5" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="28" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TTB-gB-DtE">
-                                                <rect key="frame" x="127.5" y="0.0" width="210.5" height="30"/>
+                                                <rect key="frame" x="128" y="0.0" width="210" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -645,13 +645,13 @@
                                         <rect key="frame" x="0.0" y="158" width="343" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iKe-ub-qh2">
-                                                <rect key="frame" x="0.0" y="0.0" width="32.5" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="33" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aek-yV-vxC">
-                                                <rect key="frame" x="32.5" y="0.0" width="310.5" height="30"/>
+                                                <rect key="frame" x="33" y="0.0" width="310" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -662,13 +662,13 @@
                                         <rect key="frame" x="0.0" y="188" width="343" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Severity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qKN-N9-E6y">
-                                                <rect key="frame" x="0.0" y="0.0" width="62.5" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="63" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DBe-RQ-pvx">
-                                                <rect key="frame" x="62.5" y="0.0" width="280.5" height="30"/>
+                                                <rect key="frame" x="63" y="0.0" width="280" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -679,13 +679,13 @@
                                         <rect key="frame" x="0.0" y="218" width="343" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BLL-Zg-npc">
-                                                <rect key="frame" x="0.0" y="0.0" width="49.5" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gMu-d7-AXv">
-                                                <rect key="frame" x="49.5" y="0.0" width="293.5" height="30"/>
+                                                <rect key="frame" x="50" y="0.0" width="293" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -735,26 +735,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9nc-Dv-kz8" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="rMC-JO-rSE" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3826" y="853"/>
+            <point key="canvasLocation" x="3857" y="1344"/>
         </scene>
-        <!--map-->
-        <scene sceneID="uyg-Pc-XKg">
+        <!--Report Map View Controller-->
+        <scene sceneID="cd8-iZ-CXn">
             <objects>
-                <viewController id="t9s-fs-fp4" userLabel="map" sceneMemberID="viewController">
+                <viewController id="7X2-Dm-NbO" customClass="ReportMapViewController" customModule="litterclear" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Pk5-Lg-s4h"/>
-                        <viewControllerLayoutGuide type="bottom" id="bnT-mm-vFi"/>
+                        <viewControllerLayoutGuide type="top" id="FhH-3A-frc"/>
+                        <viewControllerLayoutGuide type="bottom" id="fDU-GD-BM9"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8tQ-vF-pnM">
+                    <view key="view" contentMode="scaleToFill" id="gCA-KF-4m0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="2qw-JU-ubf">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="map_tab_icon" id="8NN-eb-pG9"/>
+                    <navigationItem key="navigationItem" id="Kww-A1-f0t"/>
+                    <connections>
+                        <outlet property="mapView" destination="2qw-JU-ubf" id="PkW-r8-1AV"/>
+                        <segue destination="QVk-1W-gCI" kind="show" identifier="ShowMapToDetail" id="xE8-rn-eCo"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yeV-x4-i60" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WGB-Dm-laJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-257" y="1702"/>
+            <point key="canvasLocation" x="1700" y="1907"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="98N-nn-ubY">
@@ -767,7 +777,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="i7m-VT-bvN" kind="relationship" relationship="viewControllers" id="SVE-Fd-xz7"/>
-                        <segue destination="t9s-fs-fp4" kind="relationship" relationship="viewControllers" id="Xts-LE-Nsr"/>
+                        <segue destination="mBK-aT-KJG" kind="relationship" relationship="viewControllers" id="i3B-17-wPk"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Byj-73-CWP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -780,7 +790,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="i7m-VT-bvN" userLabel="list" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="" image="list_tab_icon" id="edS-2z-nph"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="mt7-Ia-m6R">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mt7-Ia-m6R">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -798,7 +808,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AIP-p5-03R" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="yHj-jd-PRG">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yHj-jd-PRG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -809,7 +819,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DVt-eb-kLL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2695" y="1345"/>
+            <point key="canvasLocation" x="3857" y="593"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="a7d-QQ-U6l">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mBK-aT-KJG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="map_tab_icon" id="ktN-HL-3xq"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="U4F-r8-UXg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="7X2-Dm-NbO" kind="relationship" relationship="rootViewController" id="6r3-0p-moZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="avh-gU-DQ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="505" y="1907"/>
         </scene>
     </scenes>
     <resources>
@@ -827,6 +856,6 @@
         <image name="profile-image" width="600" height="600"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="SQa-R1-kR3"/>
+        <segue reference="BFI-hw-axI"/>
     </inferredMetricsTieBreakers>
 </document>
